
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5323] Add system events for moving Resources in and out of Resource Groups
- [#4610] Add locale system setting for setting locale in MODX
- Add HTML5 local caching as a toggleable option for manager ui
- [#5788] Fix content not output to browser until after shutdown function
- [#5777] Fix validation of TV names against Resource field names
- Add ability to install and upgrade MODX from command line
- [#5745] Ensure all core passwords are not transmitted through MODx.config JS array
- [#4304] Add default_content_type Setting for setting the default Content Type for Resources
- [#2735] Ensure menu permissions are checked for mgr action if action has menu associated
- [#4606] Clarify connectors language in setup
- [#5561] Add search toolbar to packages grid
- [#5587] Fix issue with dashboard widgets and caching
- [#5453] Add ability to disable forgot password on manager login screen
- Add batch remove to Namespaces grid
- [#5671] Add :toPlaceholder, :cssToHead, :htmlToHead, :htmlToBottom, :jsToHead, :jsToBottom output filters
- Add delete user button to user editing page toolbar
- [#5542] Add ability to drag/drop files and folders in the Files tab
- [#5665] Remove console.log debug references in JS
- Add Media Sources, which allow abstraction of file management in MODX
- [#2737] Centralize logic for changing Context of modResource Children
- [#5068] Move token check for new resources below error validation in processor to prevent bogus duplicate resource issue
- [#4945] Remove weblink content maxlength restriction
- [#5270] Enable container drag 'n drop in Extended Fields tree
- [#4790] Add support for comment tag token, e.g. [[- comments here]]
- [#5539] Add back in compress_css/js for allowing toggling of js/css compression in manager